Fix minor mobile layout bug for full width cards (legend to close to bar in small screens)

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -833,7 +833,7 @@ html.flexbox:not(.Explorer):not(.Safari) {
 
         .KnowledgeBarLegend {
             .greyed;
-            margin-top: -10px;
+            margin-top: -7px;
             font-size: 12px;
             line-height: 1.5em;
             //text-transform: uppercase;
